Fix tab scrolling on Safari and Mobile Safari

--- a/src/components/common/Tabs.css
+++ b/src/components/common/Tabs.css
@@ -2,10 +2,16 @@
   overflow-x: scroll;
 }
 
+.Tabs::-webkit-scrollbar {
+  -webkit-appearance: none;
+  display: none;
+}
+
 .Tabs-tab {
   border-bottom: 4px solid transparent;
   opacity: 0.5;
   white-space: nowrap;
+  flex-shrink: 0;
 }
 
 .Tabs-tab.is-selected {
@@ -16,5 +22,6 @@
 @media (max-width: 460px) {
   .Tabs {
     justify-content: flex-start !important;
+    -webkit-justify-content: flex-start !important;
   }
 }
